Fix /terms links resulting in selected headers being hidden under navbar

--- a/webroot/css/_variables.scss
+++ b/webroot/css/_variables.scss
@@ -1,6 +1,7 @@
 $section-spacer: 2rem;
 $theme-link-color: #16507b;
 $theme-link-hover-color: #2487ce;
+$padding-top-to-avoid-navbar-overlapping: 130px;
 
 /* Bootstrap overrides */
 $primary: #1A5B11;
